# AlleyCATUpload

./: .gitignore  LICENSE  Parse_single_line.py  README.md  Upload_to_mongo.py  pyproject.toml
.github/workflows/: main.yml
AlleyCATUpload/: Upload_to_mongo.py
GatorCATUpload/: Upload_to_mongo.py
tests/: test_Upload_to_mongo.py
