[tool.poetry]
name = "GatorCATUpload"
version = "0.1.0"
description = "Tool for uploading Gator Grader output to a MongoDB Database"
authors = ["Wesley Long <46755903+WesleyL30@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.0.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
GatorCATUpload = "GatorCATUpload.Upload_to_mongo:main"
